<resources>
    <string name="app_name">Famil-school</string>
    <string name="appname">家校通</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember">记住密码</string>
    <string name="login">登录</string>
    <string name="homepage">首页</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="essay">好文推荐</string>
    <string name="forget">忘记密码</string>
    <string name="reset">确认</string>
    <string name="complete">完成</string>
    <string name="reset_password_hint">请输入密码</string>
    <string name="reset_resetPassword_hint">请再次输入密码</string>
    <string name="welcome_tv_leap">跳过</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
