<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aloogn.view.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="25sp"
            android:textColor="@color/linght_black"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/reset_et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:textColor="@color/linght_black"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/reset_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/reset_password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="25sp"
            android:textColor="@color/linght_black"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/reset_et_resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/reset_resetPassword_hint"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/reset_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="25sp"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

</LinearLayout>