<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aloogn.view.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:progress="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"/>

    <LinearLayout
        style="@style/Login_LinearLayout">

        <TextView
            android:text="@string/account"
            style="@style/Login_TextView_accountAndPassword"/>

        <EditText
            android:id="@+id/login_et_account"
            style="@style/Login_EditText"/>

    </LinearLayout>

    <LinearLayout
        style="@style/Login_LinearLayout">

        <TextView
            android:text="@string/password"
            style="@style/Login_TextView_accountAndPassword"/>

        <EditText
            android:id="@+id/login_et_password"
            android:inputType="textPassword"
            style="@style/Login_EditText"/>

    </LinearLayout>

        <TextView
            android:id="@+id/login_tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textSize="20sp"
            android:textColor="@color/pink"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>